# git-statistics

./: Cargo.toml  README-CN.md  README.md  package-lock.json
app/: .eslintrc.cjs  package-lock.json  package.json  tailwind.config.js
app/src/: App.css  App.tsx  Chart.tsx  PieChart.tsx  SettingsState.ts  events.ts  index.css  main.tsx  menu.ts  open_repo.ts  types.ts  utils.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: events.rs  git.rs  main.rs
app/src/components/: CountLimit.tsx  InputWithConfirm.tsx  NumberInput.tsx  PathList.tsx  SideBar.tsx  Sort.tsx  StatusBar.tsx  Summary.tsx
app/src/hooks/: useColorScheme.tsx
src/: lib.rs  main.rs  stats.rs
