[package]
name = "git-statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "git-stats"
[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
git2 = "0.18"
log = "0.4"
